--- a/index.html
+++ b/index.html
@@ -8,8 +8,49 @@
     <title>12 Bool</title>
   </head>
   <body class="debug">
-    <div class="container">
-            
+    <div id="row-1" class="container">
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+      <div class="col-1">1 col</div>
+    </div>
+    <div id="row-2" class="container">
+      <div class="col-12">12 col</div>
+    </div>
+    <div id="row-3" class="container">
+      <div class="col-8">8 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
+    </div>
+    <div id="row-4" class="container">
+      <div class="col-1">1 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-2">2 col</div>
+      <div class="col-6">6 col</div>
+      <div class="col-1">1 col</div>
+    </div>
+    <div id="row-5" class="container">
+      <div class="col-6">
+        <div class="container nested">
+          <div class="col-2">Nested 2 col</div>
+          <div class="col-2">Nested 2 col</div>
+          <div class="col-8">Nested 8 col</div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="container nested">
+          <div class="col-6">Nested 6 col</div>
+          <div class="col-6">Nested 6 col</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
